# tcp-messenger

./: CHANGELOG.md  README.md  package.yaml  stack.yaml  tcp-messenger-test.prof  tcp-messenger.cabal
.github/workflows/: haskell.yml
app/: Main.hs
src/: Lib.hs  TcpMsg.hs
src/TcpMsg/: Connection.hs  Data.hs  Network.hs  Parsing.hs  ParsingBuffers.hs  TcpClient.hs  TcpServer.hs
src/TcpMsg/Client/: Abstract.hs  Tcp.hs
src/TcpMsg/Effects/: Client.hs  Connection.hs  Logger.hs  Supplier.hs
src/TcpMsg/Peer/: Abstract.hs
src/TcpMsg/Server/: Abstract.hs  Tcp.hs
test/: ClientSpec.hs  ParserSpec.hs  ServerSpec.hs  Spec.hs
