cabal-version: 2.2

name:           tcp-messenger
version:        0.1.0.0
description:    A lightweight request-response protocol for Haskell applications
homepage:       https://github.com/maciejwas/tcp-messenger#readme
bug-reports:    https://github.com/maciejwas/tcp-messenger/issues
author:         Maciej Wasilewski
maintainer:     wasilewskimaciej20@gmail.com
copyright:      2024 Maciej Wasilewski
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/maciejwas/tcp-messenger

library
  exposed-modules:
      TcpMsg
      TcpMsg.Client.Abstract
      TcpMsg.Client.Tcp
      TcpMsg.Data
      TcpMsg.Network
      TcpMsg.Connection
      TcpMsg.Parsing
      TcpMsg.Server.Abstract
      TcpMsg.Server.Tcp
  other-modules:
      Paths_tcp_messenger
  autogen-modules:
      Paths_tcp_messenger
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -fno-full-laziness -funfolding-use-threshold=0
  build-depends:
      async
    , base >=4.7 && <5
    , containers ==0.6.7
    , bytestring ==0.11.5.3
    , cereal ==0.5.8.3
    , exceptions ==0.10.5
    , network ==3.1.4.0
    , socket ==0.8.3.0
    , stm ==2.5.1.0
    , stm-containers
    , text ==2.0.2
    , unix-time ==0.4.11
    , hashable
  default-language: Haskell2010

executable tcp-messenger-exe
  main-is: Main.hs
  other-modules:
      Paths_tcp_messenger
  autogen-modules:
      Paths_tcp_messenger
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -fno-full-laziness -funfolding-use-threshold=0 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      async
    , base >=4.7 && <5
    , bytestring ==0.11.5.3
    , cereal ==0.5.8.3
    , exceptions ==0.10.5
    , network ==3.1.4.0
    , socket ==0.8.3.0
    , stm ==2.5.1.0
    , stm-containers
    , tcp-messenger
    , text ==2.0.2
    , unix-time ==0.4.11
  default-language: Haskell2010

test-suite tcp-messenger-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      ClientSpec
      ParserSpec
      ServerSpec
      Paths_tcp_messenger
  autogen-modules:
      Paths_tcp_messenger
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -fno-full-laziness -funfolding-use-threshold=0 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      QuickCheck ==2.14.3
    , async
    , base >=4.7 && <5
    , bytestring ==0.11.5.3
    , cereal ==0.5.8.3
    , exceptions ==0.10.5
    , hspec ==2.10.10
    , network ==3.1.4.0
    , quickcheck-instances ==0.3.30
    , socket ==0.8.3.0
    , stm ==2.5.1.0
    , stm-containers
    , tcp-messenger
    , text ==2.0.2
    , unix-time ==0.4.11
    , random ==1.2.1.2
  default-language: Haskell2010
